# tauri_leptos_bar

./: Cargo.toml  Trunk.toml  index.html
src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
