[package]
name = "tauri_leptos_bar_ui"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
gloo-timers = { version = "0.3", features = ["futures"] }
gloo-console = "0.3"
chrono = { version = "0.4", features = ["wasmbind"] }
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = ["Window", "Document", "Element", "HtmlElement", "console"]

[workspace]
